v2.0.3.10
---------
* Moved verbosity, progress and notify unknown system controls to settings form.
* Increase height of buttons.
* Increase width of square buttons to match new height.
* Changed settings button icon and position.
* Run and Cancel buttons disable immediately on click to prevent repeated clicks.
* Changed hops and jumps minimums to 2 and 1 respectively.

v2.0.3.9
--------
* Fixed issue #10 - Exception when TD database is locked by eddblink_listener.

v2.0.3.8
--------
* Added splash screen to avoid a long "nothing happening" delay when first opening TDH.

v2.0.3.7
--------
* Fixed issue #8 - Chime on completion of task. Play Alert check box in settings.

v2.0.3.6
--------
* Fixed issue #9 Dropdowns not working correctly.

v2.0.3.5
--------
* Fixed issue #7. TD Helper will now load without error when no INI file is available.
* Fixed issue #6. Saving settings whilst in Local mode will not overwrite the select ship's laden LY value.

v2.0.3.4
--------
* Updater additionally checks the file versions before downloading new version.
* Fixed issue #3. 
* Fixed issue #5. TD Helpernow has settings for progress, No Planet and Planetary.

v2.0.3.3
--------
* Fixed bug that kept asking for paths at every start.

v2.0.3.2
--------
* Added "TD Helper - " to all dialog title bars.
* Fixed bug where cancelling from the mandatory path selection did not close the application.

v2.0.2.1
--------
* Fixed issue #1 - AppConfigLocal.xml doesn't exist!
* fixed issue #2 - Calling Python borks out where there are spaces in paths.

v2.0.2.0
--------
* Removed copyright message
* Update stopwatch once a second and not ten times a second.
* Added commander name to main form title.
* Added read and write settings to ini configuration file.
* Current settings saved on closing TD Helper.
* TD Helper now shows a message when loading the net logs if the process takes more than 5 seconds.