@@ -6,6 +6,7 @@ v2.0.3.10
 * Changed settings button icon and position.
 * Run and Cancel buttons disable immediately on click to prevent repeated clicks.
 * Changed hops and jumps minimums to 2 and 1 respectively.
+* Only add hops to command if direct is not checked.
 
 v2.0.3.9
 --------
